# OxygenEngine2

./: .clang-format  .gitignore  .gitmodules  Exceptions.h  LICENSE  Makefile  OE_VerySimple.csl  README.md  compile  configure  cross_linux2windows  cross_web  csl_main_test.cpp  emscripten_linux.cross  fe_export_test2.csl  lights_simple.csl  meson.build  mingw_linux.cross  monkeys.csl  oe_main_test.cpp  remake.sh  test.csl  writeFiles.sh
.github/workflows/: clang_format_check.yml  meson_build.yml  meson_build_and_test.yml  meson_cross_build.yml  meson_test.yml
addons/io_scene_csl/: __init__.py
addons/io_scene_csl/FE_Utils/: CSL_Writer.py  OE_Types.py
addons/io_scene_csl/OE_Utils/: CSL_Writer.py
cross_config/: SDL_config_windows.h  oe_test.html
examples/: csl_main_test.cpp  events_tasks_test.cpp  main.cpp  oe_main_test.cpp
include/: FEngine.h  FError.h  FGamepad.h  FKeyboard.h  FMath.h  FMouse.h  FTask.h  FWorldManager.h  FtaskManager.h  OE_API.h  OE_API_Helpers.h  OE_DummyClasses.h  OE_Error.h  OE_Math.h  OE_SDL_WindowSystem.h  OE_Task.h  OE_TaskManager.h  api_helpers_oe.h  api_oe.h  dummy_classes.h  error_oe.h  math_oe.h  task.h  task_manager.h  winsys_sdl2.h
include/Carbon/: CSL_Exceptions.h  CSL_Interpreter.h  CSL_Interpreter.h_OLD  CSL_Lexer.h  CSL_Lexer.h.old  CSL_Lexer_cpp17.h  CSL_Lexer_cpp20.h  CSL_Parser.h  CSL_Parser.h.old  CSL_Writer.h  CScanner_CLexer.h  Carbon_Parser.h  Exceptions.h  lexer.h  lexer_cpp20.h
include/Events/: FE_Event.h  FE_EventHandler.h  FE_EventParser.h  FE_InputEventHandler.h  OE_Event.h  OE_EventHandler.h  OE_EventParser.h  OE_InputEventHandler.h  OE_MutexCondition.h  event.h  event_handler.h  event_parser.h  input_event_handler.h  mutex_condition.h
include/Hydrogen_Engine/: Collision_Engine.h  HE_Types.h  Hydrogen_Engine.h
include/OE/: api_helpers_oe.h  api_oe.h  dummy_classes.h  error_oe.h  global_variables.h  math_oe.h  task.h  task_manager.h  winsys_sdl2.h
include/OE/Carbon/: exceptions_csl.h  interpreter.h  lexer.h  lexer_cpp20.h  parser.h
include/OE/Events/: event.h  event_container.h  event_handler.h  event_parser.h  input_event_handler.h  mutex_condition.h
include/OE/Hydrogen_Engine/: HE_Types.h  Hydrogen_Engine.h
include/OE/Renderer/: api_gpu.h  drawcall_container.h  (+6 more)
include/Renderer/: FE_GPU_API.h  FE_GPU_CommandQueue.h  FE_GPU_Info.h  FE_GPU_Program.h  FE_GPU_Shader.h  FE_GPU_Thread.h  FE_GPU_Uniform.h  FE_GPU_VertexBuffer.h  FE_GPU_VertexLayout.h  FE_MeshRenderData.h  FE_Renderer.h  NRE_DrawCallContainer.h  NRE_Exceptions.h  NRE_GL3_API.h  NRE_GL3_Shaders.h  NRE_GPU_API.h  NRE_GPU_Shaders.h  NRE_RenderData.h  NRE_RendererLegacy.h  NRE_RendererMain.h  NRE_RendererUtils.h  api_gpu.h  drawcall_container.h  exceptions_nre.h  glad.h  renderer_legacy.h  renderer_main.h  renderer_utils.h  shaders_gpu.h
include/types/: FE_Animation.h  FE_Camera.h  FE_Interaction.h  FE_Libs.h  FE_Light.h  FE_Material.h  FE_Mesh.h  FE_Object.h  FE_Polygon.h  FE_Scene.h  FE_TCM.h  FE_Texture.h  FE_Vertex.h  FE_VertexGroup.h  FE_World.h  OE_Camera.h  OE_Lexer_Namespaces.h  OE_Libs.h  OE_Light.h  OE_Material.h  OE_Mesh.h  OE_Object.h  OE_PolygonStorage.h  OE_Scene.h  OE_SharedIndexMap.h  OE_TCM.h  OE_Texture.h  OE_TypesBase.h  OE_VertexGroup.h  OE_VertexStorage.h  OE_ViewportConfig.h  OE_World.h  base_types.h  camera.h  libs_oe.h  light.h  material.h  mesh.h  namespaces.h  object.h  (+9 more)
new_shared_index_map/: sharedIM_test.cpp
parser_v2/: Exception.h  Lexer.cpp  Lexer.h  Makefile  main.cpp
parser_v2/general_directional_top_down_parser/: Makefile  Parser.cpp  Parser.h  bp  main.cpp
parser_v2/lexer/: Lexer.cpp  Lexer.hpp  Makefile  countchars  countchars.cpp  main.cpp  run.sh  test.csl.easy
parser_v2/parser/: .session  Lexer.cpp  Lexer.hpp  Makefile  Parser.cpp  Parser.hpp  main.cpp  test.csl.small
parser_v2/performance_test/: FileWrapper.cpp  FileWrapper.h  LexerException.h  Makefile  main.cpp  readspeed.h
src/: FEngine.cpp  FError.cpp  FGamepad.cpp  FKeyboard.cpp  FMath.cpp  FMouse.cpp  FTask.cpp  FWorldManager.cpp  FtaskManager.cpp  OE_API.cpp  OE_API_Helpers.cpp  OE_DummyClasses.cpp  OE_Error.cpp  OE_Math.cpp  OE_SDL_WindowSystem.cpp  OE_Task.cpp  OE_TaskManager.cpp  api_helpers_oe.cpp  api_oe.cpp  dummy_classes.cpp  error_oe.cpp  global_variables.cpp  math_oe.cpp  task.cpp  task_manager.cpp  winsys_sdl2.cpp
src/Carbon/: CSL_Exceptions.cpp  CSL_Interpreter.cpp  CSL_Lexer.cpp  CSL_Parser.cpp  CSL_Parser.cpp.old  interpreter.cpp
src/Events/: FE_Event.cpp  FE_EventHandler.cpp  FE_EventParser.cpp  FE_InputEventHandler.cpp  OE_Event.cpp  OE_EventHandler.cpp  OE_EventParser.cpp  OE_InputEventHandler.cpp  OE_MutexCondition.cpp  event.cpp  event_handler.cpp  event_parser.cpp  input_event_handler.cpp  mutex_condition.cpp
src/Hydrogen_Engine/: Collision_Engine.cpp  Hydrogen_Engine.cpp
src/Renderer/: .NRE_RenderData.cpp.kate-swp  FE_GPU_API.cpp  FE_GPU_CommandQueue.cpp  FE_GPU_Info.cpp  FE_GPU_Program.cpp  FE_GPU_Shader.cpp  FE_GPU_Thread.cpp  FE_GPU_Uniform.cpp  FE_GPU_VertexBuffer.cpp  FE_GPU_VertexLayout.cpp  FE_MeshRenderData.cpp  FE_Renderer.cpp  NRE_DrawCallContainer.cpp  NRE_GL3_API.cpp  NRE_GL3_Shaders.cpp  NRE_GPU_API.cpp  NRE_GPU_Shaders.cpp  NRE_RenderData.cpp  NRE_RendererLegacy.cpp  NRE_RendererMain.cpp  NRE_RendererUtils.cpp  api_gpu.cpp  drawcall_container.cpp  glad.c  renderer_legacy.cpp  renderer_main.cpp  renderer_utils.cpp  shaders_gpu.cpp
src/types/: FE_Animation.cpp  FE_Camera.cpp  FE_Interaction.cpp  FE_Light.cpp  FE_Material.cpp  FE_Mesh.cpp  FE_Object.cpp  FE_Polygon.cpp  FE_Scene.cpp  FE_TCM.cpp  FE_Texture.cpp  FE_Vertex.cpp  FE_VertexGroup.cpp  FE_World.cpp  OE_Camera.cpp  OE_Light.cpp  OE_Material.cpp  OE_Mesh.cpp  OE_Object.cpp  OE_PolygonStorage.cpp  OE_Scene.cpp  OE_TCM.cpp  OE_Texture.cpp  OE_TypesBase.cpp  OE_VertexGroup.cpp  OE_VertexStorage.cpp  OE_ViewportConfig.cpp  OE_World.cpp  base_types.cpp  camera.cpp  light.cpp  material.cpp  mesh.cpp  object.cpp  polygon_storage.cpp  scene.cpp  tcm.cpp  texture.cpp  vertex_group.cpp  vertex_storage.cpp  (+2 more)
subprojects/: ctre.wrap
test/: example.cpp
(+52 files in other folders)
